fix: arregle error al generar excel, agregue excepcion personalizada y refactorize codigo